All_Component_DX/force-app/main/default/objects/Service_Plan__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conveys whether the catalog is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>