All_Component_DX/force-app/main/default/objects/Service_Plan__c/fields/Default_Parts_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Default_Parts_Price_Book__c</fullName>
    <description>Default price book to be used when no parts price is defined</description>
    <label>Parts Price Book</label>
    <length>100</length>
    <type>Text</type>
</CustomField>