All_Component_DX/force-app/main/default/objects/Service_Plan__c/fields/Default_Travel_Unit__c.field-meta.xml
<CustomField>
    <fullName>Default_Travel_Unit__c</fullName>
    <label>Default Travel Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Per Hour</fullName>
            </value>
            <value>
                <fullName>Tiered Per Mile/Km</fullName>
            </value>
            <value>
                <fullName>Zone Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>