All_Component_DX/force-app/main/default/objects/Service_Plan__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>Price for the contract coverage</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>