All_Component_DX/force-app/main/default/objects/Service_Plan__c/fields/Minimum_Travel__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Travel__c</fullName>
    <description>Minimum labor price for travel</description>
    <label>Minimum Travel (Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>