All_Component_DX/force-app/main/default/objects/Service_Plan__c/fields/Service_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Service_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Pricebook</label>
    <referenceTo>Service_Pricebook__c</referenceTo>
    <relationshipName>Service_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>