All_Component_DX/force-app/main/default/objects/Service_Plan__c/fields/Travel_Rounding_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Rounding_Type__c</fullName>
    <label>Rounding Type (Travel)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Round Up</fullName>
            </value>
            <value>
                <fullName>Round Down</fullName>
            </value>
            <value>
                <fullName>Actuals</fullName>
                <default>true</default>
                <label>Actuals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>