All_Component_DX/force-app/main/default/objects/Service_Plan__c/listViews/All_Service_Plans.listView-meta.xml
<ListView>
    <fullName>All_Service_Plans</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>List_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Plans</label>
    <language>en_US</language>
</ListView>